# md-doc-pipeline

./: .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  _theme.css  check.sh  init.bat  init.sh  pyproject.toml
.github/workflows/: build-and-sync.yml  ci.yml  publish.yml
docs/: _meta.yml  _theme.example.css  authoring-guide.md  config-reference.md  extraction-guide.md  pdf-forms-guide.md  pdf-forms-plan.md  python-api.md  quickstart.md  troubleshooting.md
docs/examples/: _merge_fields.yml  _meta.yml  example-dotx-template.md  example-markdown-form.md  example-pdf-form.md  example-pdf-report.md
examples/blueshift/: README.md  _docx-theme.css  _meta.yml  _pdf-theme.css  _theme.css
examples/insurance-binders/: _meta.yml
examples/project-reports/: _docx-theme.css  _meta.yml  _pdf-theme.css  _theme.css
filament-md-doc/: README.md  composer.json  package.json
filament-md-doc/config/: md-doc.php
filament-md-doc/docs/: architecture.md  building.md  configuration.md  git-integration.md  installation.md  local-assets.md  locking.md  (+2 more)
md-doc-web-editor/: README.md  pyproject.toml
md-doc-web-editor/md_doc_web_editor/: __init__.py  cli.py  server.py
md-doc-web-editor/md_doc_web_editor/static/: editor.css  editor.js  index.html
md-doc-web-editor/tests/: test_server.py
md_doc/: cli.py  config.py  config_schema.py  docx_theme.py  exporter.py  extractors.py  linter.py  mermaid.py  register.py  renderer.py  theme.py
nvim-plugin/: README.md  md-doc.yml.example
prompts/: document-author.md  document-converter-standalone.md
tests/: test_build_incremental.py  test_build_validation.py  test_cascade_subdir.py  test_cli_extract.py  test_cli_fields.py  test_cli_logging.py  test_cli_new.py  test_config.py  test_config_schema.py  test_doctor.py  test_docx_builder.py  test_docx_parity.py  test_export_staging.py  test_exporter.py  test_extractors.py  test_linter.py  test_linter_frontmatter.py  test_mermaid.py  test_meta_yaml_lint.py  test_pagebreak.py  test_pdf_builder.py  test_pdf_footer_style.py  test_pptx_builder.py  test_register.py  test_renderer.py  test_sync_backends.py  test_sync_resilience.py  test_theme.py  test_workspace_subdir.py
workspace/: CLAUDE.md
(+80 files in other folders)
